Refactored AppTest: get rid of URL warning; improve formatting